# AITool.CSharp.Practice

./: .gitignore  AGENTS.md  CLAUDE.md  HYBRID_STOCK_ADVISOR.md  README.learning.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
AITool.CSharp.Practice/: .gitignore  AITool.CSharp.Practice.csproj  Dockerfile  Program.cs  README.md  appsettings.json
AITool.CSharp.Practice/HttpClients/: Example01_ChatCompletions.http  Example02_FunctionCalling.http  http-client.env.json  http-client.private.env.json
AITool.CSharp.Practice/Infrastructure/: AspireSericeExtention.cs  LangfuseSeriveExtention.cs  OpentelemtryServiceExtention.cs
AITool.CSharp.Practice/Models/: Configuration.cs  GitHubSettings.cs  KernelFactory.cs  OpenAISettings.cs
AITool.CSharp.Practice/Properties/: launchSettings.json
AITool.CSharp.Practice/Python/: .env.example  agent_chat_with_dev_ui.py  my_autogen_agent_chat.py  requirements.txt  sample_4_0_autogen_chat.py  sample_5_1_Agentframework.py  sample_token_counter.py  token_counter.py
AITool.CSharp.Practice/Samples/: Sample_1_3_CSnakes_TokenCounting.cs  Sample_1_4_TokenCounting.cs  Sample_1_GitHubOpenAI.cs  Sample_1_OpenAISDK_GithubMarketPlace.cs  Sample_2_0_1_SemanticKernel_ChatCompletion_JsonFormat.cs  Sample_2_0_1_SemanticKernel_ChatCompletion_ResponseFormat.cs  Sample_2_0_2_SemanticKernel_Article_QA.cs  Sample_2_0_SemanticKernel_ChatCompletion.cs  Sample_3_1_SemanticKernel_Agent.cs  (+11 more)
(+38 files in other folders)
